--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@
 .App{
   background: radial-gradient(rgb(123, 102, 216), rgba(148, 61, 211, 0.822), rgb(75, 17, 113) );
   min-height: 100vh;
+
 }
 
 .profile{
@@ -157,7 +158,9 @@
   height: 80vh;
   margin-top: 50px;
   color: white;
- background: linear-gradient(135deg, #020617c7, #0ea4e9cd);
+    background-image: url("./assets/pic2.png") ;
+  background-size: cover;
+ 
 
 }
 .about-section h2{
@@ -165,7 +168,7 @@
   padding-top: 20px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-.about-section p{
+  p{
   width: 60%;
   margin: auto;
   margin-top: 20px;
@@ -174,10 +177,13 @@
   text-align: center;
 }
 .about-content{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
   gap: 40px;
   width: 80%;
+
   margin-left: auto;
   margin-right: auto;
   margin-top: 30px;
@@ -185,7 +191,14 @@
 
 
 }
-
+.personal-details{
+ height: 379px;
+ width: 484px;
+}
+.my-interest{
+  height: 379px;
+ width: 600px;
+}
 .personal-details ul{
   list-style: none;
   padding: 0;
@@ -209,17 +222,20 @@
  margin-top: 5px;
   gap: 20px;
 
- 
+ background-color: #a600ffc7;
+ width: fit-content;
+ padding: 0px 5px;
+ border-radius: 5px;
  
 
 }
 .personal-details ul li strong{
- color: rgb(84, 201, 211);
+ color: rgb(255, 255, 255);
 }
 .personal-details ul li span{
   font-weight: 500;
   font-size: 13px;
-  color: rgb(207, 211, 214);
+  color: rgb(255, 255, 255);
 }
 
 
@@ -266,4 +282,210 @@
   font-weight: 600;
   text-align: center;
   
+}
+.Skill-section{
+  width: 100%;
+  height:200px;
+  min-height: fit-content;
+ 
+  
+
+}
+.Skill-section h2{
+  margin: 0px auto;
+  margin-top: 20px;
+  color: rgb(255, 255, 255);
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  border-left: 2px solid white;
+  border-right: 2px solid white;
+  width: 360px;
+  padding: 0px 20px;
+
+}
+.Skill-section .Skill-box{
+  width: 80%;
+  height: 120px;
+ margin: 20px auto 0px auto;
+  border: none;
+  border-radius: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  
+  background-color: rgba(255, 255, 255, 0.529);
+  
+  
+}
+.project-section{
+  margin-top: 30px;
+  width: 100%;
+  min-height: 300px;
+  height: fit-content;
+  border: none;
+   background-image: url("./assets/pic1.png");
+  background-size:contain;
+ 
+}
+.project-section h2{
+  text-align: center;
+  width: fit-content;
+  color: white;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin: 5px auto 5px auto;
+  font-weight: bold;
+}
+.project-container{
+  width: 100%;
+  min-height: 250px;
+  height: fit-content;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+ 
+}
+.project-box{
+  width: 300px;
+  height: 200px;
+  background-color: rgba(0, 255, 115, 0.87);
+  border-radius: 5px;
+  border: 2px solid rgb(0, 255, 94);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  position: relative;
+  box-shadow: 2px 5px 10px rgb(52, 51, 51);
+}
+.project-box h4{
+    font-size: 16px;
+    font-weight: 800;
+    text-align: center;
+    font-family:Arial, Helvetica, sans-serif;
+}
+.project-box p{
+  font-size: 13px;
+  text-align: center;
+  font-weight: 600;
+
+}
+.project-box .tags{
+  display: flex;
+  gap: 10px;
+ 
+}
+.project-box .tags p{
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  padding: 1px 5px 1px 5px;
+  text-align: center;
+   font-size: 12px;
+}
+.project-box .p-linkBox{
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  display: flex;
+  gap: 10px;
+}
+.project-box .p-linkBox a{
+  text-decoration: none;
+  cursor: pointer;
+ color: black;
+}
+.Contact-section{
+  width: 100%;
+  min-height: 500px;
+  height: fit-content;
+   background-image: url('./assets/pic1.png');
+ 
+  background-size: contain;
+
+}
+.Contact-section .ContactBox{
+  height: 450px;
+  width: 700px;
+  min-height: fit-content;
+
+  margin: 0px auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  background-image: url('./assets/pic3.png');
+  backdrop-filter: blur(2px);
+  background-size: cover;
+}
+.Contact-section .ContactBox h2{
+   backdrop-filter: blur(2px);
+   color: white;
+   border-bottom: 2px solid white;
+}
+.form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  height: 350px;
+  width: 400px;
+  z-index: 99;
+   background-color: rgba(250, 250, 250, 0.595);
+   border-radius: 10px;
+
+  position: relative;
+}
+#in-title{
+  font-size: 15px;
+  font-weight: 500;
+  position: absolute;
+  background-color: rgba(39, 255, 205, 0.774);
+  color: aliceblue;
+  padding: 0px 5px ;
+  border-radius: 2px;
+ 
+}
+.form input{
+  width: 90%;
+  height: 40px;
+  outline: none;
+  border: none;
+  background: none;
+   color: white;
+   
+  
+}
+.form  textarea{
+  width: 90%;
+  height: 40px;
+  outline: none;
+  border: none;
+  background: none;
+   
+}
+.form .Line{
+  width: 90%;
+  border-bottom: 3px solid black;
+  margin-bottom: 20px;
+  background: transparent;
+
+}
+.form .Line:hover{
+ border-bottom: 3px solid  rgba(39, 255, 205, 0.774);
+  transition: all 0.5s initial;
+  
+  
+}
+.form button{
+  width: 90%;
+  height: 30px;
+  font-size: 16px;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  background-color: black;
+  color: white;
 }
